--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,9 @@ footer{
 }
 a{
   text-decoration: none;
+  
 }
+  
 .product{
   display: flex;
   flex-direction: column;
@@ -111,4 +113,17 @@ a{
 .button.primary{
   background-color: goldenrod;
 
+}
+
+/*Filter*/
+.filter{
+  display: flex;
+  justify-content:space-between;
+  padding: 1rem;
+  margin: 1rem;
+  border-bottom: 0.1rem #c0c0c0 solid;
+  
+}
+.filter div{
+  flex: 1;
 }
